--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "main": "index.js",
+  "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.1.0"
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
